--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,95 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    position: relative;
+}
+
+.container {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li {
+    list-style-type: none;
+
+    padding-right: 10px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+/*navbar header*/
+
+header {
+    position: fixed;
+    top: 0;
+
+    width: 100%;
+
+    background-color: #ff6900;
+}
+
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 95%;
+    min-height: 50px;
+    margin: auto;
+}
+
+/*end navbar header*/
+
+/*start main*/
+
+main {
+    margin-top: 100px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image {
+    display: flex;
+
+    position: relative;
+    top: 10px;
+
+    width: calc(100% /3);
+    height: 450px;
+
+    margin-bottom: 120px;
+    margin-left: 20px;
+
+    border: black solid 2px;
+    /*test*/
+}
+
+footer {
+    border: black solid 2px;
+    /*test*/
+
+    width: 100%;
+    height: 80px;
+}
+
+.social,
+.information {
+    padding-top: 22px;
+}
