--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     position: relative;
+    font-family: sans-serif;
 }
 
 .container {
@@ -31,6 +32,7 @@ a {
     text-decoration: none;
 }
 
+
 /*navbar header*/
 
 header {
@@ -40,6 +42,9 @@ header {
     width: 100%;
 
     background-color: #ff6900;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
+    ;
+    z-index: 1;
 }
 
 
@@ -49,8 +54,12 @@ nav {
     align-items: center;
 
     width: 95%;
-    min-height: 50px;
+    min-height: 60px;
     margin: auto;
+}
+
+.logo {
+    width: 150px;
 }
 
 /*end navbar header*/
@@ -69,8 +78,8 @@ main {
 
 .image {
     display: flex;
-
     position: relative;
+
     top: 10px;
 
     width: calc(100% /3);
@@ -83,10 +92,46 @@ main {
     /*test*/
 }
 
-footer {
-    border: black solid 2px;
-    /*test*/
+.box {
+    position: absolute;
+    bottom: -50px;
+    left: 0;
+    line-height: 1em;
+}
 
+.discount {
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    z-index: 1;
+    background-color: red;
+}
+
+.eco {
+    left: 50px;
+    background-color: green;
+}
+
+.heart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    top: 10px;
+    right: 0;
+
+    width: 40px;
+    height: 40px;
+
+    background-color: white;
+    color: black;
+
+}
+
+footer {
+    background-color: #1a1a1a;
+    color: white;
     width: 100%;
     height: 80px;
 }
@@ -94,4 +139,8 @@ footer {
 .social,
 .information {
     padding-top: 22px;
+}
+
+li {
+    padding-top: 5px;
 }
