--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header {
     background-color: #ff6900;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
     ;
-    z-index: 1;
+    z-index: 3;
 }
 
 
@@ -88,8 +88,7 @@ main {
     margin-bottom: 120px;
     margin-left: 20px;
 
-    border: black solid 2px;
-    /*test*/
+    z-index: 0;
 }
 
 /*box clothes*/
@@ -152,6 +151,12 @@ main {
     color: black;
 }
 
+.heart,
+.eco,
+.discount {
+    z-index: 3;
+}
+
 /*end box clothes*/
 
 
@@ -174,4 +179,22 @@ li {
 
 h1 {
     font-size: 1.2em;
+}
+
+
+/*display effects*/
+.hover-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    height: 100%;
+
+    opacity: 0;
+    z-index: 2;
+    transition: 0.3s ease;
+}
+
+.hover-image:hover {
+    opacity: 1;
 }
