--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    position: relative;
     font-family: sans-serif;
 }
 
@@ -191,10 +190,16 @@ h1 {
     height: 100%;
 
     opacity: 0;
-    z-index: 2;
-    transition: 0.3s ease;
 }
 
 .hover-image:hover {
     opacity: 1;
+    transition: 0.3s ease;
+}
+
+/*bonus*/
+
+.heart:hover {
+    color: red;
+    font-size: 3em;
 }
